# phogro

./: CMakeLists.txt  CODING_STYLE.md  Doxyfile.in  LICENSE  PhoGro.pro  README.md
UI/: ImageList.qml  MainWindow.qml  qml.qrc
src/: main.cpp
src/Interfaces/: ICategoryPresenter.hpp  ICategoryView.hpp  IImagePresenter.hpp  IImageView.hpp  IProjectPresenter.hpp  IProjectView.hpp
src/Model/: Category.hpp  Image.hpp  Project.hpp
src/Presenter/: CategoryPresenter.hpp  ImagePresenter.hpp  ProjectPresenter.hpp
src/View/: CategoryView.hpp  ImageView.hpp  ProjectView.hpp
